in composite_main_window, fixes to notebook styles: add css class custorm-scrollbar to scrollable panels, some fixes related to using tags-and-links-content-top-outer-wrapper instead of tags-and-links-content-top-wrapper

--- a/src-frontend/composite/composite_main_window.styles.css
+++ b/src-frontend/composite/composite_main_window.styles.css
@@ -108,6 +108,7 @@ body {
   overflow-x: hidden;
 }
 
+#tags-and-links-content-top-wrapper,
 #tags-and-links-content-bottom-wrapper,
 #notes-content-bottom-wrapper {
   flex: 1 1 1px;
@@ -150,6 +151,12 @@ body {
 }
 
 #tags-and-links-content-outer-wrapper:not(.as-two-panels):not(.maximized-bottom-panel) > 
+#tags-and-links-content-top-outer-wrapper {
+  height: 100%;
+  overflow: hidden;
+}
+
+#tags-and-links-content-outer-wrapper:not(.as-two-panels):not(.maximized-bottom-panel) > 
 #tags-and-links-content-top-wrapper,
 #notes-content-outer-wrapper:not(.as-two-panels):not(.maximized-bottom-panel) > 
 #notes-content-top-wrapper {
@@ -168,9 +175,11 @@ body {
 
 
 #tags-and-links-content-outer-wrapper.as-two-panels >
-#tags-and-links-content-top-wrapper {
+#tags-and-links-content-top-outer-wrapper {
   height: 30%;
   flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 #tags-and-links-content-outer-wrapper.as-two-panels >
